--- a/README
+++ b/README
@@ -1,1 +1,28 @@
-TODO
+GenWrapper
+----------
+
+Maco Jez's genwrapper is a utiltiy program that reads C++ header files and then automatically generates osgWrapper code from to use alongside osgIntrospection. 
+
+GenWrapper  was created as an 'ad-hoc' tool to support the development of osgIntrospection and it was never intended to be used with anything other than OSG source files, nor it was designed to meet requirements other than the author's ones. GenWrapper was tested on the OSG source tree ONLY and it's not known to work with anything else. If you want to use GenWrapper  on your own application's source tree, try to follow OSG coding conventions and directory layout in order to minimize the risk of failure. GENWRAPPER MAY OVERWRITE AND DESTROY YOUR FILES, USE AT YOUR OWN RISK. ALWAYS MAKE BACKUPS!!! 
+
+Wrappers are generated from a two-phases process. The first phase requires an XML description of source files to be created with Doxygen (GenWrapper can build a Doxyfile for you). In the second phase GenWrapper takes the XML input and generates C++ introspection wrappers and optionally GNU makefiles and VS6 project files. 
+
+NOTES
+-----
+GenWrapper only overwrites files whose content has actually changed. Wrapper files are written into output_dir/src/osgWrappers. VS6 project files are written into output_dir/VisualStudio/osgWrappers.
+Change lists (option -l) are created as three text files for each target directory. Such files are named "removed.gw" (list of removed files), "added.gw" (list of added files) and "modified.gw" (list of modified files).
+
+Tested Doxygen version is 1.4.1. GenWrapper may not work with other versions. 
+
+2006 - Written by Maco Jez
+2010 - Updated by Mike Wozniewski, Tristan Matthews and Alexandre Quessy
+
+REPORTING BUGS
+--------------
+http://github.com/mikewoz/genwrapper/issues
+
+COPYRIGHT
+---------
+This code is released in the public domain.
+
+Use, distribute, copy, modify, squeeze, trash... Do anything you wish :) 
