--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,1 @@
-Written by Maco Jez
-Updated by Mike Wozniewski, Tristan Matthews and Alexandre Quessy
+Written by Robert Osfield, Maco Jez, Wang Rui, Mike Wozniewski, Tristan Matthews and Alexandre Quessy.
