--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,4 @@
-Written by Maco Jez
-Updated by Mike Wozniewski, Tristan Matthews and Alexandre Quessy
-
-2011-0?-?? cppintrospection 2.11.2
+2011-03-12 cppintrospection 2.11.2
 ----------------------------------
 
 This release is a developer snapshot in the 2.11 unstable series.
