--- a/NEWS
+++ b/NEWS
@@ -1,15 +1,13 @@
-2011-0?-?? cppintrospection 2.11.4
+2011-03-12 cppintrospection 2.11.4
 ----------------------------------
 
 This release is a developer snapshot in the 2.11 unstable series.
 
-This version contains new features and bug fixes.
-
-New features:
-    * 
+This version contains bug fixes.
 
 Bug fixes: 
-    * 
+    * Fixed prefix of some macros
+    * Link to OSG
 
 
 2011-03-12 cppintrospection 2.11.2
