post-release version bump

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+2011-0?-?? cppintrospection 2.11.6
+----------------------------------
+
+This release is a developer snapshot in the 2.11 unstable series.
+
+This version contains bug fixes.
+
+Bug fixes: 
+    * 
+
+
 2011-03-12 cppintrospection 2.11.4
 ----------------------------------
 
