--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
  * Add CMakeList.txt files
  * merge with upstream again
  * add boost requirements to private libs in pkg-config file
+ * make sure we check for help2man
