--- a/TODO
+++ b/TODO
@@ -4,3 +4,4 @@
  * add boost requirements to private libs in pkg-config file
  * make sure we check for help2man
  * any method that can throw an exception should specify its throws
+ * don't build man pages with doxygen
