preparing for a release

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-2011-0?-?? cppintrospection 2.11.6
+2011-04-07 cppintrospection 2.11.6
 ----------------------------------
 
 This release is a developer snapshot in the 2.11 unstable series.
@@ -8,7 +8,7 @@ This version contains bug fixes.
 Bug fixes: 
     * do not build man pages
     * using glibtool on OSX
-    * lowered required of openthreads
+    * lowered required version of openthreads
 
 
 2011-03-12 cppintrospection 2.11.4
