post-release version bump

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+2011-??-?? cppintrospection 2.11.8
+----------------------------------
+
+This release is a developer snapshot in the 2.11 unstable series.
+
+This version contains bug fixes.
+
+Bug fixes: 
+    * (none)
+
+
 2011-04-07 cppintrospection 2.11.6
 ----------------------------------
 
