post-release version bump

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,17 @@
+2011-??-?? cppintrospection 3.0.2
+----------------------------------
+
+This release is a stable release in the 3.0 stable series.
+
+This version contains no bug fix, nor new feature.
+
+Bug fixes: 
+    * (none)
+
+New features:
+    * (none)
+
+
 2011-04-28 cppintrospection 3.0.0
 ----------------------------------
 
